src/objects/ACCL__Sell_Sheet__c.object
<CustomObject>
    <description>This object contains the attributes associated with the sell sheet to be used on the sales folder.</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active flag.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Description based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c, 
&quot;Language1&quot;, ACCL__Description_Language_1__c, 
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c), 
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c), 
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Note__c</fullName>
        <description>General note about the sell sheet.</description>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales organization which the sell sheet belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_KeyAccount__c</fullName>
        <description>key account picklist based on which sharing rules will be defined</description>
        <label>KeyAccount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACI</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>BJS</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>CDM</fullName>
                </value>
                <value>
                    <fullName>CENR</fullName>
                </value>
                <value>
                    <fullName>CNT</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>CVI</fullName>
                </value>
                <value>
                    <fullName>CVR</fullName>
                </value>
                <value>
                    <fullName>CVTS</fullName>
                </value>
                <value>
                    <fullName>DCO</fullName>
                </value>
                <value>
                    <fullName>DOT</fullName>
                </value>
                <value>
                    <fullName>DRUG</fullName>
                </value>
                <value>
                    <fullName>ECOM</fullName>
                </value>
                <value>
                    <fullName>HQM</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>LIQ</fullName>
                </value>
                <value>
                    <fullName>NER</fullName>
                </value>
                <value>
                    <fullName>RGE</fullName>
                </value>
                <value>
                    <fullName>SAM</fullName>
                </value>
                <value>
                    <fullName>SOU</fullName>
                </value>
                <value>
                    <fullName>TGT</fullName>
                </value>
                <value>
                    <fullName>VALU</fullName>
                </value>
                <value>
                    <fullName>W2W</fullName>
                </value>
                <value>
                    <fullName>WEST</fullName>
                </value>
                <value>
                    <fullName>WHOL</fullName>
                </value>
                <value>
                    <fullName>WINC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sell Sheet</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>ACCL__Note__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sell Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell Sheets</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACCL__Check_If_Sales_Org_Is_Changed</fullName>
        <active>true</active>
        <description>The Sales Org can&apos;t be edited after Sell Sheet creation.</description>
        <errorConditionFormula>AND(ISCHANGED(ACCL__Sales_Org__c) , NOT(ISBLANK(PRIORVALUE(ACCL__Sales_Org__c))))</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after Sell Sheet creation.</errorMessage>
    </validationRules>
</CustomObject>